<resources>
    <string name="app_name">2ch Browser</string>
    <string name="crash_toast_text">Aww, crash. Send the report?</string>
    <string name="loading">Loading...</string>
    <string name="addpost_sage">Sage</string>
    <string name="addpost_message_hint">Message</string>
    <string name="addpost_subject_hint">Subject</string>
    <string name="addpost_captcha_can_skip">Send without confirmation</string>
    <string name="addpost_captcha_can_skip_passcode">You have a passcode</string>
    <string name="addpost_captcha_fail_passcode">Bad passcode, refresh the captcha</string>
    <string name="addpost_captcha_hint">Confirmation code</string>
    <string name="addpost_captcha_solve_recaptcha">You will see captcha after submit</string>
    <string name="addpost_send_button">Send</string>
    <string name="addpost_refresh_button">Refresh</string>
    <string name="pick_board_input_hint">Board code</string>
    <string name="pick_board_button">Go</string>
    <string name="pick_board_title">Pick board</string>
    <string name="postitem_replies">Replies:</string>
    <string name="fileslist_nofiles">No files.</string>
    <string name="tabs_opentabs">Tabs</string>
    <string name="tabs_bookmarks">Favorites</string>
    <string name="tabs_history">History</string>
    <string name="addpost_politics_prompt">Political preferences</string>
    <string name="addpost_politics_default">No Icon</string>
    <string name="share_via">Share via</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="favorites">Favorites</string>
    <string name="search_board_hint">Search</string>
    <string name="show_full_comment"><a href=''>Show the full text</a></string>
    <string name="tap_to_refresh">Tap to refresh</string>
    <string name="send_post_again">Send your post again</string>
    <string name="search_history_hint">Search text or /board_code/</string>
    <string name="unmoderated_boards_list_popup_title">Warning!</string>
    <string name="unmoderated_boards_list_popup_text">This action involves access to adult content.
        By pressing OK you confirm that you are 18 years old and aware about any consequences of viewing mature content.</string>
    <plurals name="data_posts_quantity">
        <item quantity="one">%d post</item>
        <item quantity="other">%d posts</item>
    </plurals>
    <plurals name="data_files_quantity">
        <item quantity="one">%d file</item>
        <item quantity="other">%d files</item>
    </plurals>
    <plurals name="data_new_posts_quantity">
        <item quantity="one">%d new post</item>
        <item quantity="other">%d new posts</item>
    </plurals>
    <plurals name="data_downloaded_files_quantity">
        <item quantity="one">%d file downloaded</item>
        <item quantity="other">%d files downloaded</item>
    </plurals>
    <plurals name="data_files_download_start_quantity">
        <item quantity="one">%1$d file will be downloaded to %2$s</item>
        <item quantity="other">%1$d files will be downloaded to %2$s</item>
    </plurals>
    <string name="data_posts_files">%1$s and %2$s</string>
    <string name="data_file_size_measure">KB</string>
    <string name="data_board_title">/%1$s/</string>
    <string name="data_board_title_with_page">/%1$s/%2$s</string>
    <string name="data_board_title_catalog">/%1$s/ - catalog</string>
    <string name="data_thread_title">/%1$s/%2$s</string>
    <string name="data_thread_withsubject_title">/%1$s/ - %2$s</string>
    <string name="data_add_thread_title">/%1$s/ - Add new thread</string>
    <string name="data_add_post_title">/%1$s/%2$s - Add new post</string>
    <string name="data_add_post_attachment_info">%1$sKB, %2$dx%3$d</string>
    <string name="data_search_posts_title">Search /%1$s/: %2$s</string>
    <string name="menu_pick_board">Pick board</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_open_browser">Open browser</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_add_post">Reply</string>
    <string name="menu_add_thread">New thread</string>
    <string name="menu_attach_file">Attach file</string>
    <string name="menu_save">Save</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tabs">Tabs</string>
    <string name="menu_clear_history">Clear history</string>
    <string name="menu_share">Share</string>
    <string name="menu_add_favorites">Add to favorites</string>
    <string name="menu_remove_favorites">Remove from favorites</string>
    <string name="menu_add_board">Add board</string>
    <string name="menu_search">Search</string>
    <string name="menu_catalog">Catalog</string>
    <string name="menu_share_link">Share link</string>
    <string name="menu_close_tabs">Close all tabs</string>
    <string name="menu_search_image_tineye">Search in TinEye</string>
    <string name="menu_search_image_google">Search in Google</string>
    <string name="menu_image_operations">Image operations</string>
    <string name="menu_play_video_external">Open external player</string>
    <string name="menu_download_all_files">Download all images</string>
    <string name="menu_attach_video">Attach video</string>
    <string name="menu_instant_photo">Take photo</string>
    <string name="menu_search_history">Search history</string>
    <string name="cmenu_answer_without_reading">Reply without reading</string>
    <string name="cmenu_open_attachment">Open attachment</string>
    <string name="cmenu_reply_post">Reply to this post</string>
    <string name="cmenu_reply_post_quote">Reply with quote</string>
    <string name="cmenu_download_file">Download file</string>
    <string name="cmenu_download_files">Download files</string>
    <string name="cmenu_copy_post">Select/copy text</string>
    <string name="cmenu_copy_url">Copy the link</string>
    <string name="cmenu_view_op_post">View OP post</string>
    <string name="cmenu_add_to_favorites">Add to favorites</string>
    <string name="cmenu_remove_from_favorites">Remove from favorites</string>
    <string name="cmenu_search_image">Search image in TinEye</string>
    <string name="cmenu_search_image_google">Search image in Google</string>
    <string name="cmenu_hide_thread">Hide thread</string>
    <string name="cmenu_share">Share</string>
    <string name="cmenu_open_thread">Open thread</string>
    <string name="pref_captcha_type_title">Captcha type</string>
    <string-array name="pref_captcha_type_choices">
        <item>Dvach</item>
        <item>ReCaptcha_v2(google)</item>
        <item>MailRu</item>
    </string-array>
    <string name="pref_screen_dvach">2ch</string>
    <string name="pref_screen_dvach_summary">2ch.hk specific options</string>
    <string name="pref_screen_style">Style</string>
    <string name="pref_screen_style_summary">Set themes, font sizes, UI</string>
    <string name="pref_screen_images">Images</string>
    <string name="pref_screen_images_summary">Images specific options</string>
    <string name="pref_screen_other">Other</string>
    <string name="pref_screen_other_summary">Everything else</string>
    <string name="pref_category_image_viewer">Image viewer</string>
    <string name="pref_category_autorefresh">AutoRefresh</string>
    <string name="pref_screen_cache">Cache</string>
    <string name="pref_screen_cache_summary">Cache settings</string>
    <string name="pref_category_datetime">Date &amp; Time</string>
    <string name="pref_homepage">Default start page</string>
    <string name="pref_homepage_summary">Change the start page</string>
    <string name="pref_homepage_hint">Enter a board code</string>
    <string name="pref_load_thumbnails">Display thumbnails</string>
    <string name="pref_load_thumbnails_summary">Disable to reduce web traffic</string>
    <string name="pref_download_path">Downloads folder</string>
    <string name="pref_download_path_hint">/download/2ch Browser/</string>
    <string name="pref_download_path_summary">Change a folder where images should be saved</string>
    <string name="pref_download_background">Download images in background</string>
    <string name="pref_download_background_summary">The progress dialog will not be displayed</string>
    <string name="pref_name">Name</string>
    <string name="pref_name_summary">Leave it blank</string>
    <string name="pref_name_hint">Anonymous</string>
    <string name="pref_domain">Domain</string>
    <string name="pref_domain_summary">Reserved domains: 2ch.hk, 2ch.pm, 2ch.re, 2ch.tf, 2ch.wf, 2ch.yt, 2-ch.so</string>
    <string name="pref_domain_hint">2ch.hk or 85.17.28.149</string>
    <string name="pref_display_post_date">Time of posts</string>
    <string name="pref_display_post_date_summary">Display the time of each post</string>
    <string name="pref_convert_post_date">Show local time</string>
    <string name="pref_convert_post_date_summary">Display your local time instead of Moscow time</string>
    <string name="pref_popup_link">Popup links</string>
    <string name="pref_popup_link_summary">Open links of the thread in the popup window</string>
    <string name="pref_display_name">Names</string>
    <string name="pref_display_name_summary">Display names of namefags above their posts</string>
    <string name="pref_display_icons">Icons</string>
    <string name="pref_display_icons_summary">Display icons</string>
    <string name="pref_text_size">Text size</string>
    <string name="pref_cut_posts">Long posts</string>
    <string name="pref_cut_posts_hint">0 - do not cut; 400px by default</string>
    <string name="pref_cut_posts_summary">Cut long posts if they are longer than the specified value</string>
    <string name="pref_file_cache_limit">Limited cache</string>
    <string name="pref_file_cache_limit_summary">Enable cache size limit</string>
    <string name="pref_file_cache_media_limit">Media cache size, %</string>
    <string name="pref_file_cache_pages_limit">Pages cache size, %</string>
    <string name="pref_file_cache_thumb_limit">Thumbnails cache size, %</string>
    <string name="pref_file_cache_pages_threshold_limit">Keep pages newer than N days</string>
    <string name="pref_multithumbnails_in_threads">Multiple Thumbnails</string>
    <string name="pref_multithumbnails_in_threads_summary">Display multiple thumbnails in threads list</string>
    <string name="pref_mobileapi">Mobile API</string>
    <string name="pref_mobileapi_summary">Load only new posts without reloading the whole thread</string>
    <string name="pref_use_https">Use HTTPS</string>
    <string name="pref_use_https_summary">Enable secure communication by using https:// instead of http://</string>
    <string name="pref_unsafe_ssl">Ignore SSL Certificate Errors</string>
    <string name="pref_unsafe_ssl_summary">Disable Certificate Validation</string>
    <string name="pref_disable_zoom_controls">Disable Zoom Controls</string>
    <string name="pref_disable_zoom_controls_summary">Disable built-in zoom buttons in WebView (only Android 3 and newer)</string>
    <string name="pref_gif_preview">GIF Viewer</string>
    <string-array name="pref_gif_preview_choices">
        <item>WebView</item>
        <item>libgif.so</item>
    </string-array>
    <string name="pref_image_preview">Image Viewer</string>
    <string-array name="pref_image_preview_choices">
        <item>WebView</item>
        <item>subsampling-scale-image-view (requires Android 2.3.3 and newer)</item>
    </string-array>
    <string name="pref_video_player">Webm Player</string>
    <string-array name="pref_video_player_choices">
        <item>Auto</item>
        <item>WebView (Android 5 and newer)</item>
        <item>VideoView (Android 2.3.3 and newer)</item>
        <item>External player, 1 click</item>
        <item>External player, 2 clicks through gallery</item>
    </string-array>
</resources>