<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/tabs_menu_id" android:title="@string/menu_tabs" android:icon="@drawable/ic_menu_windows" />
    <item android:id="@+id/add_menu_id" android:title="@string/menu_add_thread" android:icon="@drawable/ic_menu_add" />
	<item android:id="@+id/refresh_menu_id" android:title="@string/menu_refresh" android:icon="@drawable/ic_menu_refresh" android:alphabeticShortcut="r" />
	<item android:id="@+id/pick_board_menu_id" android:title="@string/menu_pick_board" android:icon="@drawable/ic_menu_flash" />
	<item android:id="@+id/open_browser_menu_id" android:title="@string/menu_open_browser" android:icon="@drawable/ic_menu_browser"/>
	<item android:id="@+id/preferences_menu_id" android:title="@string/menu_preferences" android:icon="@drawable/ic_menu_preferences" android:alphabeticShortcut="p"/>
</menu>
