<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addpost_captcha_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/addpost_captcha_image"
                android:layout_width="fill_parent"
                android:layout_height="90dip"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <include
                android:id="@+id/addpost_captcha_loading"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                layout="@layout/loading"
                android:visibility="gone" />

            <TextView
                android:id="@+id/addpost_captcha_skip_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/addpost_captcha_can_skip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/addpost_refresh_button"
            android:layout_width="@dimen/navigation_button_size"
            android:layout_height="@dimen/navigation_button_size"
            android:background="@null"
            android:src="?iconRefresh" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:orientation="horizontal" >
        <EditText
            android:id="@+id/addpost_captcha_input"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:hint="@string/addpost_captcha_hint"
            android:imeOptions="flagNoExtractUi|flagNoFullscreen|actionSend"
            android:inputType="number"
            android:singleLine="true" />
        <Button
            android:id="@+id/addpost_send_button"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/addpost_send_button" />
    </LinearLayout>

</LinearLayout>